<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <!--Data item that holds the reminder details-->
        <variable
            name="reminderDataItem"
            type="com.udacity.project4.locationreminders.reminderslist.ReminderDataItem" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_margin="@dimen/padding_normal"
        tools:context=".locationreminders.ReminderDescriptionActivity">


        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@{reminderDataItem.title}"
            android:textSize="@dimen/text_size_large"
            tools:text="Title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reminder_desc" />


        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_large"
            tools:text="Description"
            android:text="@{reminderDataItem.description}"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location"
            />

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_large"
            tools:text="Location"
            android:text="@{reminderDataItem.location}" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/latitude" />

        <TextView
            android:id="@+id/tv_latitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="@dimen/text_size_large"
            tools:text="Latitude"
            android:text="@{reminderDataItem.latitude.toString()}" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/longitude" />
        <TextView
            android:id="@+id/tv_longitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="@dimen/text_size_large"
            tools:text="Longitude"
            android:text="@{reminderDataItem.longitude.toString()}" />



    </LinearLayout>
</layout>